--- a/test.html
+++ b/test.html
@@ -6,28 +6,35 @@
 </head>
 <body>
 <script type="text/javascript">
-  function binarySearch(start, end, k, compareFunction) {
-    let arr = this;
-    let temp,
-      mid,
-      midData;
-    while (start <= end) {
-      mid = Math.floor((start + end) / 2);
-      midData = arr[mid];
-      temp = compareFunction(midData, k)
-      if (temp < 0) {
-        end = mid - 1;
-      } else if (temp > 0) {
-        start = mid + 1;
-      } else {
-        return mid
+  function selection(comp, up = true) {
+    let arr = this,
+      len = arr.length,
+      temp,
+      edgeItem,
+      edgeIndex,
+      i,
+      j;
+    for (i = 0; i < len; ++i) {
+      edgeItem = arr[i];
+      edgeIndex = i;
+      for (j = i + 1; j < len; ++j) {
+        temp = comp(edgeItem, arr[j]);
+        if (temp > 0) {
+          edgeItem = arr[j];
+          edgeIndex = j;
+        }
       }
+      for (j = edgeIndex - 1; j >= i; --j) {
+        arr[j + 1] = arr[j];
+      }
+      arr[i] = edgeItem;
     }
-    return -1;
+    return arr;
   };
-  var z = [0,1,3,4,5,6,7,9]
-  var r = binarySearch.call(z, 0, z.length - 1, 3, function (a, b) {
-    return b-a
+
+  var z = [0,1,3,999,-10,4,5,6,7,9]
+  var r = selection.call(z, function (a, b) {
+    return  b - a
   })
   console.log(r)
 </script>
