--- a/test.html
+++ b/test.html
@@ -6,49 +6,83 @@
 </head>
 <body>
 <script type="text/javascript">
-  function insert(comp, start = 0, end) {
-    let arr = this,
-      len = end || arr.length,
-      left,
-      right,
-      i,
-      j,
-      tempItem,
-      temp,
-      mid;
-    for (i = start + 1; i < len; ++i) {
-      tempItem = arr[i];
-      left = start;
-      if(comp(tempItem, arr[i-1]) < 0){
-        right = i - 1;
-        while (left <= right) {
-          mid = Math.floor((left + right) / 2);
-          temp = comp(tempItem, arr[mid]);
-          if (temp < 0) {
-            right = mid - 1;
-          } else {
-            left = mid + 1;
-          }
-        }
-        for (j = i - 1; j >= left; --j) {
-          arr[j + 1] = arr[j];
-        }
-        arr[left] = tempItem;
-      }
+  function swap(arr, i, j) {
+    let tmp = arr[i];
+    arr[i] = arr[j];
+    arr[j] = tmp;
+  }
+
+  let bucket = [
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    [],
+    []
+  ];
+
+  bucket.reset = function () {
+    let i = 0;
+    for (; i < 20; ++i){
+      this[i] = [];
     }
-    return arr;
   };
 
-  function merge(arr, comp) {
+  function radix(arr, comp, getNumber) {
     let len = arr.length,
       i,
       j,
-      _len = Math.pow(2, Math.ceil(Math.log2(len)));
-    for(i = 2; i <= _len; i = i << 1){
-      for(j = 0; j < len; j += i){
-        insert.call(arr, comp, j, Math.min(j + i, len));
+      index,
+      tmp,
+      number,
+      positiveNum = 0,
+      negativeNum = 0;
+
+    for (i = 0; i < len; ++i) {
+      tmp = arr[i].toString().split('.');
+      if (tmp[0] && tmp[0].length > positiveNum) {
+        positiveNum = tmp[0].length;
+      }
+      if (tmp[1] && tmp[1].length > negativeNum) {
+        negativeNum = tmp[1].length;
       }
     }
+
+    // 基数排序正数部分
+    for (i = 0; i < positiveNum; ++i) {
+      for (j = 0; j < len; ++j) {
+        // 一次获取i位上的数字，然后插入对象桶
+        number = getNumber(arr, j);
+        index = ~~(~~(~~number/Math.pow(10, i)) % 10);
+        if(number > 0){
+          bucket[index + 10].push(arr[j]);
+        }else{
+          bucket[9 + index].push(arr[j]);
+        }
+      }
+      arr.length = 0;
+      arr = Array.prototype.concat.apply(arr, bucket);
+      bucket.reset();
+    }
+    // 基数排序负数部分
+    for (i = 0; i < negativeNum; ++i) {
+
+    }
+
     return arr;
   };
 
@@ -57,9 +91,11 @@
   /*var r = merge.call(z, function (a, b) {
     return -(a - b)
   })*/
-  var r = merge(z, function (a, b) {
-    return b - a
-  })
+  var r = radix(z, function (a, b) {
+    return a - b
+  }, function (arr, i) {
+    return arr[i];
+  });
   console.log(r)
 </script>
 </body>
